vlib/v/checker/tests/const_field_name_duplicate_err.out
vlib/v/checker/tests/const_field_name_duplicate_err.v:3:2: error: field name `aaa` duplicate
    1 | const (
    2 |     aaa = 1
    3 |     aaa = 2
      |     ~~~
    4 | )
    5 | fn main() {
