vlib/v/checker/tests/const_field_name_duplicate_err.vv
const (
	aaa = 1
	aaa = 2
)
fn main() {
	println(aaa)
}
